Findbugs errors
svn path=/trunk/; revision=46201


Former-commit-id: 8ae84b13a31f255566f98750a5278810fe06fbac